--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
