--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-tooltip": "^1.2.0",
     "@tensorflow-models/body-pix": "^2.2.1",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "@tensorflow/tfjs-core": "^4.22.0",
@@ -23,13 +21,14 @@
     "clsx": "^2.1.1",
     "depcheck": "^1.4.7",
     "lucide-react": "^0.487.0",
-    "motion": "^12.6.3",
+    "motion": "^12.6.5",
     "next": "15.3.0",
     "peerjs": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.5.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "3.2.0",
     "tailwindcss-animate": "^1.0.7"
@@ -37,8 +36,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
     "@tensorflow/tfjs": "^4.22.0",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "tailwindcss": "^4.1.3",
     "typescript": "^5.8.3"
